# latex-template-engine

./: .gitignore  CHANGELOG.md  LICENSE  README.md  compile_tex.py  document.tex  pyproject.toml  test_output_j2.tex
.github/workflows/: ci.yml
docs/: COMMENTING_ENHANCEMENT.md  configuration.md  getting-started.md  interactive-guide.md  template-creation.md
examples/: uccs_sample.yaml
plugins/nvim/: README.md
plugins/vscode/: README.md
projects/: .gitignore
projects/uccs-me-syse/classes/EMGT5510/2025_summer/: EMGT5510_Module-13_casestudy13.2.tex
src/latex_template_engine/: __init__.py  interactive.py
src/latex_template_engine/assets/: __init__.py  manager.py
src/latex_template_engine/cli/: __init__.py  main.py
src/latex_template_engine/config/: __init__.py  schema.py
src/latex_template_engine/core/: __init__.py  engine.py  template.py
templates/: LeadershipPortfolio.tex.j2  example.tex.j2  example.yaml  homework.tex.j2  homework.yaml  homework_vars.yaml  report.tex.j2  report.yaml  report_vars.yaml  uccs_report.tex  uccs_report.yaml
tests/: test_engine.py
